==> AddictiveInstruments/ADIOS/mios32/STM32F4xx/mios32_usb.c <==
#include <mios32.h>
#include <usbd_core.h>
#include <usbd_def.h>
#include <usbd_desc.h>
#include <usbd_req.h>
#include <usbd_conf.h>
#include <usbh_core.h>
#include <usbh_conf.h>
#include <usb_otg.h>
#include <usb_dcd_int.h>
#include <usb_hcd_int.h>
#include <usb_regs.h>
#include <string.h>
#define DSCR_DEVICE	1	// Descriptor type: Device
#define DSCR_CONFIG	2	// Descriptor type: Configuration
#define DSCR_STRING	3	// Descriptor type: String
#define DSCR_INTRFC	4	// Descriptor type: Interface
#define DSCR_ENDPNT	5	// Descriptor type: Endpoint
#define CS_INTERFACE	0x24	// Class-specific type: Interface
#define CS_ENDPOINT	0x25	// Class-specific type: Endpoint
#  define MIOS32_USB_MIDI_NUM_INTERFACES        2
#  define MIOS32_USB_MIDI_AC_INTERFACE_IX       0x00
#  define MIOS32_USB_MIDI_AS_INTERFACE_IX       0x01
#  define MIOS32_USB_MIDI_INTERFACE_OFFSET      2
#  define MIOS32_USB_MIDI_NUM_INTERFACES        1
#  define MIOS32_USB_MIDI_INTERFACE_NUM         0x00
#  define MIOS32_USB_MIDI_INTERFACE_OFFSET      1
# define MIOS32_USB_MIDI_SIZ_CLASS_DESC         (7+MIOS32_USB_MIDI_NUM_PORTS*(6+6+9+9)+9+(4+MIOS32_USB_MIDI_NUM_PORTS)+9+(4+MIOS32_USB_MIDI_NUM_PORTS))
# define MIOS32_USB_MIDI_SIZ_CONFIG_DESC        (9+MIOS32_USB_MIDI_USE_AC_INTERFACE*(9+9)+MIOS32_USB_MIDI_SIZ_CLASS_DESC)
# define MIOS32_USB_MIDI_SIZ_CLASS_DESC_SINGLE_USB  (7+1*(6+6+9+9)+9+(4+1)+9+(4+1))

void USB_OTG_BSP_Init(USB_OTG_CORE_HANDLE *pdev)
{
  if(USB_OTG_FS_BSP_Initialised == 0){
    USB_OTG_FS_BSP_Initialised =1;
  //RCC_AHB1PeriphClockCmd( RCC_AHB1Periph_GPIOA , ENABLE);
  LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOA);

  /* Configure SOF VBUS ID DM DP Pins */
  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Pin = LL_GPIO_PIN_8 | LL_GPIO_PIN_9 | LL_GPIO_PIN_11 | LL_GPIO_PIN_12;
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStructure.Mode = LL_GPIO_MODE_ALTERNATE;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_NO ;
  LL_GPIO_Init(GPIOA, &GPIO_InitStructure);

  LL_GPIO_SetAFPin_8_15(GPIOA, LL_GPIO_PIN_8, LL_GPIO_AF_10);
  LL_GPIO_SetAFPin_8_15(GPIOA, LL_GPIO_PIN_9, LL_GPIO_AF_10);
  LL_GPIO_SetAFPin_8_15(GPIOA, LL_GPIO_PIN_11, LL_GPIO_AF_10);
  LL_GPIO_SetAFPin_8_15(GPIOA, LL_GPIO_PIN_12, LL_GPIO_AF_10);
//  GPIO_PinAFConfig(GPIOA,GPIO_PIN_8,GPIO_AF_OTG1_FS) ;
//  GPIO_PinAFConfig(GPIOA,GPIO_PIN_9,GPIO_AF_OTG1_FS) ;
//  GPIO_PinAFConfig(GPIOA,GPIO_PIN_11,GPIO_AF_OTG1_FS) ;
//  GPIO_PinAFConfig(GPIOA,GPIO_PIN_12,GPIO_AF_OTG1_FS) ;

  /* ID pin has to be an input for Host/Device switching during runtime */
  GPIO_InitStructure.Pin =  LL_GPIO_PIN_10;
  GPIO_InitStructure.Mode = LL_GPIO_MODE_ALTERNATE;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_UP ;
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
  LL_GPIO_Init(GPIOA, &GPIO_InitStructure);
  LL_GPIO_SetAFPin_8_15(GPIOA, LL_GPIO_PIN_10, LL_GPIO_AF_10);
  //GPIO_PinAFConfig(GPIOA,GPIO_PIN_10,GPIO_AF_OTG1_FS) ;

  LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_SYSCFG);
  LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_OTGFS);
//  RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);
//  RCC_AHB2PeriphClockCmd(RCC_AHB2Periph_OTG_FS, ENABLE) ;

  LL_EXTI_ClearFlag_0_31(LL_EXTI_LINE_0);
  }

#ifndef MIOS32_DONT_USE_USB_HS_HOST
  if(USB_OTG_HS_BSP_Initialised == 0){
    USB_OTG_HS_BSP_Initialised =1;
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB , ENABLE);
  
  GPIO_InitStructure.Pin =   LL_GPIO_PIN_14 |
  LL_GPIO_PIN_15;
  
  GPIO_InitStructure.Speed = GPIO_Speed_100MHz;
  GPIO_InitStructure.Mode = GPIO_Mode_AF;
  LL_GPIO_Init(GPIOB, &GPIO_InitStructure);


  GPIO_PinAFConfig(GPIOB,GPIO_PIN_14,GPIO_AF_OTG2_FS) ;
  GPIO_PinAFConfig(GPIOB,GPIO_PIN_15,GPIO_AF_OTG2_FS) ;
  RCC_AHB1PeriphClockCmd( RCC_AHB1Periph_OTG_HS, ENABLE) ;
    
  }
#endif

}

void  USB_OTG_BSP_ConfigVBUS(USB_OTG_CORE_HANDLE *pdev)
{
#ifndef MIOS32_DONT_USE_USB_HOST
  if(pdev->cfg.coreID == USB_OTG_FS_CORE_ID){
  LL_GPIO_InitTypeDef GPIO_InitStructure; 
  
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC, ENABLE);  
  
  GPIO_InitStructure.Pin = LL_GPIO_PIN_0;
  GPIO_InitStructure.Speed = GPIO_Speed_100MHz;
  GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_NO ;
  LL_GPIO_Init(GPIOC, &GPIO_InitStructure);

  /* By Default, DISABLE is needed on output of the Power Switch */
  GPIO_SetBits(GPIOC, LL_GPIO_PIN_0);
  
  USB_OTG_BSP_mDelay(200);   /* Delay is need for stabilising the Vbus Low in Reset Condition, when Vbus=1 and Reset-button is pressed by user */
  }
#endif
#ifndef MIOS32_DONT_USE_USB_HS_HOST
  if(pdev->cfg.coreID == USB_OTG_HS_CORE_ID){
  LL_GPIO_InitTypeDef GPIO_InitStructure;

  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC, ENABLE);

  GPIO_InitStructure.Pin = LL_GPIO_PIN_14;
  GPIO_InitStructure.Speed = GPIO_Speed_100MHz;
  GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_NO ;
  LL_GPIO_Init(GPIOC, &GPIO_InitStructure);

  /* By Default, DISABLE is needed on output of the Power Switch */
  GPIO_SetBits(GPIOC, LL_GPIO_PIN_14);

  USB_OTG_BSP_mDelay(200);   /* Delay is need for stabilizing the Vbus Low in Reset Condition, when Vbus=1 and Reset-button is pressed by user */
  }
#endif

}

void USB_OTG_BSP_DriveVBUS(USB_OTG_CORE_HANDLE *pdev, uint8_t state)
{
#ifndef MIOS32_DONT_USE_USB_HOST
	  if(pdev->cfg.coreID == USB_OTG_FS_CORE_ID){
  /*
  On-chip 5 V VBUS generation is not supported. For this reason, a charge pump 
  or, if 5 V are available on the application board, a basic power switch, must 
  be added externally to drive the 5 V VBUS line. The external charge pump can 
  be driven by any GPIO output. When the application decides to power on VBUS 
  using the chosen GPIO, it must also set the port power bit in the host port 
  control and status register (PPWR bit in OTG_FS_HPRT).
  
  Bit 12 PPWR: Port power
  The application uses this field to control power to this port, and the core 
  clears this bit on an overcurrent condition.
  */
  if (0 == state)
  { 
    /* DISABLE is needed on output of the Power Switch */
    GPIO_SetBits(GPIOC, LL_GPIO_PIN_0);
  }
  else
  {
    /*ENABLE the Power Switch by driving the Enable LOW */
    GPIO_ResetBits(GPIOC, LL_GPIO_PIN_0);
  }
	  }
#endif
#ifndef MIOS32_DONT_USE_USB_HS_HOST
	  if(pdev->cfg.coreID == USB_OTG_HS_CORE_ID){
  if (0 == state)
  {
    /* DISABLE is needed on output of the Power Switch */
    GPIO_SetBits(GPIOC, LL_GPIO_PIN_14);
  }
  else
  {
    /*ENABLE the Power Switch by driving the Enable LOW */
    GPIO_ResetBits(GPIOC, LL_GPIO_PIN_14);
  }
	  }
#endif
}

static uint8_t  MIOS32_USB_CLASS_Init (void  *pdev, 
				       uint8_t cfgidx)
{
#ifndef MIOS32_DONT_USE_USB_MIDI
  // Open Endpoints
  DCD_EP_Open(pdev, MIOS32_USB_MIDI_DATA_OUT_EP, MIOS32_USB_MIDI_DATA_OUT_SIZE, USB_OTG_EP_BULK);
  DCD_EP_Open(pdev, MIOS32_USB_MIDI_DATA_IN_EP, MIOS32_USB_MIDI_DATA_IN_SIZE, USB_OTG_EP_BULK);

  // configuration for next transfer
  DCD_EP_PrepareRx(&USB_OTG_FS_dev,
		   MIOS32_USB_MIDI_DATA_OUT_EP,
		   (uint8_t*)(USB_FS_rx_buffer),
		   MIOS32_USB_MIDI_DATA_OUT_SIZE);
#endif

  return USBD_OK;
}

s32 MIOS32_USB_Init(u32 mode)
{
  // currently only mode 0..2 supported
  if( mode >= 3 )
    return -1; // unsupported mode

  u8 usb_is_initialized = MIOS32_USB_IsInitialized();

#ifndef MIOS32_DONT_USE_USB_HOST
  /* Init Host Library */
  USBH_Init(&USB_OTG_FS_dev,
            USB_OTG_FS_CORE_ID,
            &USB_FS_Host,
            (USBH_Class_cb_TypeDef *)&MIOS32_USBH_Callbacks,
            (USBH_Usr_cb_TypeDef *)&USBH_USR_Callbacks);
#endif

  // change connection state to disconnected
  USBD_USR_DeviceDisconnected();

  if( mode == 0 && usb_is_initialized ) {
    // if mode == 0: no reconnection, important for BSL!

#if 0
    // init USB device and driver
    USBD_Init(&USB_OTG_FS_dev,
        USB_OTG_FS_CORE_ID,
        (USBD_DEVICE *)&USR_desc,
        (USBD_Class_cb_TypeDef *)&MIOS32_USB_CLASS_cb,
        (USBD_Usr_cb_TypeDef *)&USBD_USR_Callbacks);
#else

    // don't run complete driver init sequence to ensure that the connection doesn't get lost!

    // phys interface re-initialisation (just to ensure)
    USB_OTG_BSP_Init(&USB_OTG_FS_dev);

    // USBD_Init sets these pointer in the handle
    USB_OTG_FS_dev.dev.class_cb = (USBD_Class_cb_TypeDef *)&MIOS32_USB_CLASS_cb;
    USB_OTG_FS_dev.dev.usr_cb = (USBD_Usr_cb_TypeDef *)&USBD_USR_Callbacks;
    USB_OTG_FS_dev.dev.usr_device = (USBD_DEVICE *)&USR_desc;

    // some additional handle init stuff which doesn't hurt
    USB_OTG_SelectCore(&USB_OTG_FS_dev, USB_OTG_FS_CORE_ID);

    // enable interrupts
    USB_OTG_EnableGlobalInt(&USB_OTG_FS_dev);
    USB_OTG_EnableDevInt(&USB_OTG_FS_dev);
    USB_OTG_BSP_EnableInterrupt(&USB_OTG_FS_dev);
#endif

    // select configuration
    USB_OTG_FS_dev.dev.device_config = 1;
    USB_OTG_FS_dev.dev.device_status = USB_OTG_CONFIGURED;

    // init endpoints
    MIOS32_USB_CLASS_Init(&USB_OTG_FS_dev, 1);

    // assume that device is (still) configured
    USBD_USR_DeviceConfigured();
  } else {
    // init USB device and driver
    USBD_Init(&USB_OTG_FS_dev,
        USB_OTG_FS_CORE_ID,
        (USBD_DEVICE *)&USR_desc,
        (USBD_Class_cb_TypeDef *)&MIOS32_USB_CLASS_cb,
        (USBD_Usr_cb_TypeDef *)&USBD_USR_Callbacks);

    // disconnect device
    DCD_DevDisconnect(&USB_OTG_FS_dev);

    // wait 50 mS
    USB_OTG_BSP_mDelay(50);

    // connect device
    DCD_DevConnect(&USB_OTG_FS_dev);
  }

#ifndef MIOS32_DONT_USE_USB_HOST
  // switch to host or device mode depending on the ID pin (Bootloader allows to overrule this pin)
  if( MIOS32_USB_ForceDeviceMode() || MIOS32_SYS_STM_PINGET(GPIOA, LL_GPIO_PIN_10) ) {
    USB_OTG_SetCurrentMode(&USB_OTG_FS_dev, DEVICE_MODE);
  } else {
    USB_OTG_DriveVbus(&USB_OTG_FS_dev, 1);
    USB_OTG_SetCurrentMode(&USB_OTG_FS_dev, HOST_MODE);
  }
#endif


#ifndef MIOS32_DONT_USE_USB_HS_HOST
  /* Init Host Library */
  USBH_Init(&USB_OTG_HS_dev,
            USB_OTG_HS_CORE_ID,
            &USB_HS_Host,
            (USBH_Class_cb_TypeDef *)&MIOS32_USBH_Callbacks,
            (USBH_Usr_cb_TypeDef *)&USBH_USR_Callbacks); //temp

  USB_OTG_DriveVbus(&USB_OTG_HS_dev, 1);
#endif

#if !defined(MIOS32_DONT_USE_USB_HOST) || !defined(MIOS32_DONT_USE_USB_HS_HOST)
#if !defined(MIOS32_DONT_USE_USB_HID)
  MIOS32_USB_HID_Init(0);
#endif
#endif

  return 0; // no error
}
